--- a/src/main/resources/templates/adminAccounting.html
+++ b/src/main/resources/templates/adminAccounting.html
@@ -21,8 +21,8 @@
     <div class="header-title">
         <div class="d-flex align-items-center justify-content-between">
             <div class="left d-flex align-items-center justify-content-left">
-                <img th:src="@{/images/alliance_logo.svg}" alt="">
-                <h2>Alliance Claims Application</h2>
+                <img th:src="@{/images/alliance.svg}" alt="">
+                <h2> Claims Application</h2>
             </div>
             <div class="right">
                 <button class="btn btn-secondary">Logout</button>
@@ -94,6 +94,40 @@
                     </div>
 
                     <div class="data pt-3">
+
+                        <div class="data-card p-3 m-2">
+                            <div class="row d-flex align-items-center">
+                                <div class="col-4">
+                                    <h6 class="name">Junky Dubs</h6>
+                                </div>
+                                <div class="col-4">
+                                    <p class="email">abc@gmail.com</p>
+                                </div>
+                                <div class="col-2">
+                                    <h6 class="position">Tech</h6>
+                                </div>
+                                <div class="col-2 text-right">
+                                    <i class='bx bxs-trash' ></i>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="data-card p-3 m-2">
+                            <div class="row d-flex align-items-center">
+                                <div class="col-4">
+                                    <h6 class="name">Junky Dubs</h6>
+                                </div>
+                                <div class="col-4">
+                                    <p class="email">abc@gmail.com</p>
+                                </div>
+                                <div class="col-2">
+                                    <h6 class="position">Tech</h6>
+                                </div>
+                                <div class="col-2 text-right">
+                                    <i class='bx bxs-trash' ></i>
+                                </div>
+                            </div>
+                        </div>
 
                         <div class="data-card p-3 m-2">
                             <div class="row d-flex align-items-center">
