--- a/src/main/resources/templates/claimsEmployee.html
+++ b/src/main/resources/templates/claimsEmployee.html
@@ -21,7 +21,7 @@
     <div class="header-title pb-5">
         <div class="d-flex align-items-center justify-content-between">
             <div class="left d-flex align-items-center justify-content-left">
-                <img th:src="@{/images/alliance_logo.svg}" alt="">
+                <img th:src="@{/images/alliance.svg}" alt="">
                 <h2>Alliance Claims Application</h2>
             </div>
         </div>
