Fix minor changes

--- a/src/main/resources/templates/adminAccounting.html
+++ b/src/main/resources/templates/adminAccounting.html
@@ -411,7 +411,7 @@
     });
 
 
-    // TAB CONTENT
+    // TAB CONTENT still not working
     const tab_btns = document.querySelectorAll("[data-target-tab]");
     const tab_contents = document.querySelectorAll(".content-details");
 
