--- a/src/main/resources/templates/adminAccounting.html
+++ b/src/main/resources/templates/adminAccounting.html
@@ -25,7 +25,7 @@
                 <h2> Claims Application</h2>
             </div>
             <div class="right">
-                <button class="btn btn-secondary">Logout</button>
+                <a th:href="@{/logout}"><button class="btn btn-secondary">Logout</button></a>
             </div>
         </div>
     </div>
@@ -39,13 +39,13 @@
                 <div class="row">
                     <div class="col-3">
                         <div class="profile-name">
-                            <h6>Junky Dubs</h6>
-                            <p>abc@gmail.com</p>
+                            <h6 th:text="${session.user.fullName}"></h6>
+                            <p th:text="${session.user.email}"></p>
                         </div>
                     </div>
                     <div class="col-3 d-flex align-items-center">
                         <div class="profile-desc">
-                            <h6>acctng-1</h6>
+                            <h6 th:text="${session.user.usertype}"></h6>
                         </div>
                     </div>
                     <div class="col-6">
@@ -95,70 +95,19 @@
 
                     <div class="data pt-3">
 
-                        <div class="data-card p-3 m-2">
+                        <div class="data-card p-3 m-2" th:each="user : ${users}" th:if="${user.id} != ${session.user.id}">
                             <div class="row d-flex align-items-center">
                                 <div class="col-4">
-                                    <h6 class="name">Junky Dubs</h6>
+                                    <h6 class="name" th:text="${user.fullName}"></h6>
                                 </div>
                                 <div class="col-4">
-                                    <p class="email">abc@gmail.com</p>
+                                    <p class="email" th:text="${user.email}"></p>
                                 </div>
                                 <div class="col-2">
-                                    <h6 class="position">Tech</h6>
+                                    <h6 class="position" th:text="${user.usertype}"></h6>
                                 </div>
                                 <div class="col-2 text-right">
-                                    <i class='bx bxs-trash' ></i>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="data-card p-3 m-2">
-                            <div class="row d-flex align-items-center">
-                                <div class="col-4">
-                                    <h6 class="name">Junky Dubs</h6>
-                                </div>
-                                <div class="col-4">
-                                    <p class="email">abc@gmail.com</p>
-                                </div>
-                                <div class="col-2">
-                                    <h6 class="position">Tech</h6>
-                                </div>
-                                <div class="col-2 text-right">
-                                    <i class='bx bxs-trash' ></i>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="data-card p-3 m-2">
-                            <div class="row d-flex align-items-center">
-                                <div class="col-4">
-                                    <h6 class="name">Junky Dubs</h6>
-                                </div>
-                                <div class="col-4">
-                                    <p class="email">abc@gmail.com</p>
-                                </div>
-                                <div class="col-2">
-                                    <h6 class="position">Tech</h6>
-                                </div>
-                                <div class="col-2 text-right">
-                                    <i class='bx bxs-trash' ></i>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="data-card p-3 m-2">
-                            <div class="row d-flex align-items-center">
-                                <div class="col-4">
-                                    <h6 class="name">Junky Dubs</h6>
-                                </div>
-                                <div class="col-4">
-                                    <p class="email">abc@gmail.com</p>
-                                </div>
-                                <div class="col-2">
-                                    <h6 class="position">Tech</h6>
-                                </div>
-                                <div class="col-2 text-right">
-                                    <i class='bx bxs-trash' ></i>
+                                    <a th:href="@{/delete/}+${user.id}"><i class='bx bxs-trash'></i></a>
                                 </div>
                             </div>
                         </div>
@@ -227,21 +176,23 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <h5 class="modal-title">Edit Information</h5>
+                    <form th:action="@{/edit/}+${session.user.id}" method="post">
                     <div class="modal-body d-flex flex-column">
-                        <label for="">First Name</label>
-                        <input type="text">
+                        <label>First Name</label>
+                        <input type="text" th:name="firstName" th:value="${session.user.firstName}" required>
                         <div class="p-2"></div>
-                        <label for="">Last Name</label>
-                        <input type="text">
+                        <label>Last Name</label>
+                        <input type="text" th:name="lastName" th:value="${session.user.lastName}" required>
                     </div>
                     <div class="d-flex align-items-center justify-content-end">
                         <div class="pr-3 pt-3">
                             <button type="button" class="btn btn-light" data-dismiss="modal">Cancel</button>
                         </div>
                         <div class="pr-3 pt-3">
-                            <button type="button" class="btn btn-success">Save changes</button>
+                            <button type="submit" class="btn btn-success">Save changes</button>
                         </div>
                     </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -251,24 +202,26 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <h5 class="modal-title">Change Password</h5>
+                    <form th:action="@{/accounting/changePass/}+${session.user.id}" method="post">
                     <div class="modal-body d-flex flex-column">
-                        <label for="">Current Password</label>
-                        <input type="text">
+                        <label>Current Password</label>
+                        <input type="password" th:name="curr_password">
                         <div class="p-3"></div>
-                        <label for="">New Password</label>
-                        <input type="text">
+                        <label>New Password</label>
+                        <input type="password" th:name="password">
                         <div class="p-1"></div>
-                        <label for="">Confirm Password</label>
-                        <input type="text">
+                        <label>Confirm Password</label>
+                        <input type="password">
                     </div>
                     <div class="d-flex align-items-center justify-content-end">
                         <div class="pr-3 pt-3">
                             <button type="button" class="btn btn-light" data-dismiss="modal">Cancel</button>
                         </div>
                         <div class="pr-3 pt-3">
-                            <button type="button" class="btn btn-success">Save changes</button>
+                            <button type="submit" class="btn btn-success">Save changes</button>
                         </div>
                     </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -278,29 +231,30 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <h5 class="modal-title" id="exampleModalLongTitle">Create User</h5>
+                    <form th:action="@{/register}" method="post">
                     <div class="modal-body">
                         <div class="row">
                             <div class="col-6">
                                 <div class="d-flex align-items-start flex-column">
-                                    <label for="" class="pt-2">First Name</label>
-                                    <input type="text">
-                                    <label for="" class="pt-2">Email</label>
-                                    <input type="text">
-                                    <label for="" class="pt-2">Current Password</label>
-                                    <input type="text">
+                                    <label class="pt-2">First Name</label>
+                                    <input type="text" th:name="firstName" required>
+                                    <label class="pt-2">Email</label>
+                                    <input type="text" th:name="email" required>
+                                    <label class="pt-2">Current Password</label>
+                                    <input type="password" required>
                                 </div>
                             </div>
                             <div class="col-6">
                                 <div class="d-flex align-items-start flex-column">
-                                    <label for="" class="pt-2">Last Name</label>
-                                    <input type="text">
-                                    <label for="" class="pt-2">Password</label>
-                                    <input type="text">
-                                    <label for="" class="pt-2">Department</label>
-                                    <select name="" id="">
-                                        <option value="">Sales Team</option>
-                                        <option value="">Accounting</option>
-                                        <option value="">Technical Support</option>
+                                    <label class="pt-2">Last Name</label>
+                                    <input type="text" th:name="lastName" required>
+                                    <label class="pt-2">Password</label>
+                                    <input type="password" th:name="password" required>
+                                    <label class="pt-2">Department</label>
+                                    <select th:name="usertype">
+                                        <option th:value="Sales">Sales Team</option>
+                                        <option th:value="Accounting">Accounting</option>
+                                        <option th:value="Technical">Technical Support</option>
                                     </select>
                                 </div>
                             </div>
@@ -312,9 +266,10 @@
                             <button type="button" class="btn btn-light" data-dismiss="modal">Cancel</button>
                         </div>
                         <div class="pr-3 pt-3">
-                            <button type="button" class="btn btn-success">Save changes</button>
+                            <button type="submit" class="btn btn-success">Save changes</button>
                         </div>
                     </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -372,11 +327,11 @@
                         </div>
                         <div class="row pt-2">
                             <div class="col-6">
-                                <label for="" class="pt-2">Commission Rate: </label>
+                                <label class="pt-2">Commission Rate: </label>
                                 <input type="text">
                             </div>
                             <div class="col-6">
-                                <label for="" class="pt-2">Net Amount:</label>
+                                <label class="pt-2">Net Amount:</label>
                                 <input type="text">
                             </div>
                         </div>
