--- a/src/main/resources/templates/adminAccounting.html
+++ b/src/main/resources/templates/adminAccounting.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <!-- Bootsrap CDN & Icons -->
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
@@ -204,21 +205,22 @@
                     <h5 class="modal-title">Change Password</h5>
                     <form th:action="@{/accounting/changePass/}+${session.user.id}" method="post">
                     <div class="modal-body d-flex flex-column">
+                        <input type="hidden" id="adminID" th:value="${session.user.id}"> 
                         <label>Current Password</label>
-                        <input type="password" th:name="curr_password">
+                        <input type="password" th:name="curr_password" id="adminCurrPass" required >
                         <div class="p-3"></div>
                         <label>New Password</label>
-                        <input type="password" th:name="password">
+                        <input type="password" th:name="password" id="adminnewPass" required>
                         <div class="p-1"></div>
                         <label>Confirm Password</label>
-                        <input type="password">
+                        <input type="password" th:name="conf_password" id="adminconfPass" required>
                     </div>
                     <div class="d-flex align-items-center justify-content-end">
                         <div class="pr-3 pt-3">
                             <button type="button" class="btn btn-light" data-dismiss="modal">Cancel</button>
                         </div>
                         <div class="pr-3 pt-3">
-                            <button type="submit" class="btn btn-success">Save changes</button>
+                            <button type="submit" id="save-btn" class="btn btn-success" onclick="changeUser(event)">Save changes</button>
                         </div>
                     </div>
                     </form>
@@ -239,9 +241,9 @@
                                     <label class="pt-2">First Name</label>
                                     <input type="text" th:name="firstName" required>
                                     <label class="pt-2">Email</label>
-                                    <input type="text" th:name="email" required>
-                                    <label class="pt-2">Current Password</label>
-                                    <input type="password" required>
+                                    <input type="email" th:name="email" required>
+                                    <label class="pt-2">Confirm Password</label>
+                                    <input type="password" th:name="confPass" id="addcurrPass" required>
                                 </div>
                             </div>
                             <div class="col-6">
@@ -249,7 +251,7 @@
                                     <label class="pt-2">Last Name</label>
                                     <input type="text" th:name="lastName" required>
                                     <label class="pt-2">Password</label>
-                                    <input type="password" th:name="password" required>
+                                    <input type="password" th:name="password" id="addpass"  required>
                                     <label class="pt-2">Department</label>
                                     <select th:name="usertype">
                                         <option th:value="Sales">Sales Team</option>
@@ -266,7 +268,7 @@
                             <button type="button" class="btn btn-light" data-dismiss="modal">Cancel</button>
                         </div>
                         <div class="pr-3 pt-3">
-                            <button type="submit" class="btn btn-success">Save changes</button>
+                            <button type="submit" class="btn btn-success" onclick="saveUser(event)" >Save changes</button>
                         </div>
                     </div>
                     </form>
@@ -378,6 +380,63 @@
         btn.classList.toggle("active");
         document.querySelector(btn.dataset.targetTab).classList.add("active");
     });
+    });
+    
+    // ADD USER Password Confirmation
+    function saveUser(e){
+
+        const addPass = document.getElementById("addpass").value;
+        const addCurrPass = document.getElementById("addcurrPass").value;
+
+
+        if (addPass != addCurrPass) {
+            e.preventDefault();
+            swal(
+                            'DOES NOT MATCH',
+                            'Make sure confirm password matches password',
+                            'error'
+                        )
+        }        
+
+    }
+    function changeUser(e){
+
+    const adminnewPass = document.getElementById("adminnewPass").value;
+    const adminconfPass = document.getElementById("adminconfPass").value;
+
+        if (adminnewPass != adminconfPass) {
+        e.preventDefault();
+        swal(
+                            'DOES NOT MATCH',
+                            'Make sure confirm password matches new password',
+                            'error'
+                        )
+
+    }
+}
+
+</script>
+
+<script>
+    $(document).on('click','#save-btn',function(e){     
+        e.preventDefault(); 
+        currentPassword = $("#adminCurrPass").val();
+        adminID = $("#adminID").val();
+        $.ajax({
+                url: "/confirmpassword",
+                type: "POST",
+                data:{cpass:currentPassword, admID:adminID},
+                success: function(data){
+                    if (data == "Not matched") {
+                        swal(
+                            'User Not Found',
+                            'Make sure your current password is correct',
+                            'error'
+                        )
+                    }
+                }
+                
+            });
     });
 </script>
 </html>
