--- a/src/main/resources/templates/claimsEmployee.html
+++ b/src/main/resources/templates/claimsEmployee.html
@@ -152,7 +152,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <h5 class="modal-title" id="exampleModalLongTitle">Add Claim</h5>
-                <form th:action="@{/claims/addClaim}" method="post" enctype="multipart/form-data">
+                <form th:action="@{/claim/addClaim}" method="post" enctype="multipart/form-data">
                     <div class="modal-body d-flex flex-column">
                         <label>Company Name</label>
                         <input type="text" id="company" name="company" required />
