--- a/src/main/resources/templates/claimsEmployee.html
+++ b/src/main/resources/templates/claimsEmployee.html
@@ -9,9 +9,9 @@
     <!-- Bootsrap CDN & Icons -->
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="../static/css/pageCss.css" th:href="@{/css/pageCss.css}" >
-
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Title</title>
 </head>
 <body>
@@ -103,7 +103,7 @@
                     <input type="text" th:name="lastName" th:value="${session.user.lastName}">
                     <div class="p-2"></div>
                     <label >Email</label>
-                    <input type="text" th:name="email" th:value="${session.user.email}">
+                    <input type="email" th:name="email" th:value="${session.user.email}">
                 </div>
                 <div class="d-flex align-items-center justify-content-end">
                     <div class="pr-3 pt-3">
@@ -125,21 +125,22 @@
                 <h5 class="modal-title">Change Password</h5>
                 <form th:action="@{/employee/editPass/}+${session.user.id}" method="post">
                 <div class="modal-body d-flex flex-column">
+                    <input type="hidden" id="employeeID" th:value="${session.user.id}">
                     <label>Current Password</label>
-                    <input type="password" th:name="curr_password" required>
+                    <input type="password" id="empCurrPass" th:name="curr_password" required>
                     <div class="p-3"></div>
                     <label>New Password</label>
-                    <input type="password" th:name="password" required>
+                    <input type="password" id="empNewPass" th:name="password" required>
                     <div class="p-1"></div>
                     <label>Confirm Password</label>
-                    <input type="password" required>
+                    <input type="password" id="empConfPass" required>
                 </div>
                 <div class="d-flex align-items-center justify-content-end">
                     <div class="pr-3 pt-3">
                         <button type="button" class="btn btn-light" data-dismiss="modal">Cancel</button>
                     </div>
                     <div class="pr-3 pt-3">
-                        <button type="submit" class="btn btn-success">Save changes</button>
+                        <button type="submit" class="btn btn-success" id="save-btn">Save changes</button>
                     </div>
                 </div>
                 </form>
@@ -177,23 +178,36 @@
 
 </body>
 </html>
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
-<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"-->
-<!--        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"-->
-<!--        crossorigin="anonymous"></script>-->
-<!--<script type="text/javascript">-->
-<!--    var sessionID = $("#user_id").text();-->
-<!--        $("#deleteProfileButton").click(function(){-->
-<!--            $.ajax({-->
-<!--              url: "/user/deleteSessionUser",-->
-<!--              type: "POST",-->
-<!--              data:{-->
-<!--                id: sessionID-->
-<!--                },-->
-<!--              success: function(data)-->
-<!--              {-->
-<!--                window.location = '';-->
-<!--              }-->
-<!--           });-->
-<!--        });-->
-<!--</script>-->
+<script>
+    $(document).on('click','#save-btn',function(e){
+        currentPassword = $("#empCurrPass").val();
+        newPass = $("#empNewPass").val();
+        confirmPass =  $("#empConfPass").val();
+        empID = $("#employeeID").val();
+        $.ajax({
+                url: "/empconfirmpassword",
+                type: "POST",
+                data:{cpass:currentPassword, employeeID:empID},
+                success: function(data){
+                    if (data == "Not matched"){
+                        e.preventDefault();
+                        swal(
+                            'User Not Found',
+                            'Make sure your current password is correct',
+                            'error'
+                        )
+                    }
+                }
+
+            });
+        if (newPass != confirmPass) {
+        e.preventDefault();
+        swal(
+                  'DOES NOT MATCH',
+                  'Make sure confirm password matches new password',
+                  'error'
+             )
+
+    }
+    });
+</script>
