--- a/src/main/resources/templates/adminAccounting.html
+++ b/src/main/resources/templates/adminAccounting.html
@@ -84,8 +84,7 @@
                         <input type="text" id="search_field2">
                         <select name="" >
                             <option value="">All</option>
-                            <option value="">Techical</option>
-                            <option value="">Accounting</option>
+                            <option value="">Technical</option>
                             <option value="">Sales</option>
                         </select>
                     </div>
@@ -132,15 +131,16 @@
                         <input type="date">
                         <select name="" >
                             <option value="">All</option>
-                            <option value="">Techical</option>
-                            <option value="">Accounting</option>
-                            <option value="">Sales</option>
+                            <option value="">For Release</option>
+                            <option value="">For Collection</option>
+                            <option value="">Collected</option>
+                            <option value="">Overdue</option>
+
                         </select>
                     </div>
-
-                    <div class="claims-table">
+                    <div class="claims-table pt-2 ">
                         <table>
-                            <tr>
+                            <tr class="pt-3">
                                 <th>Status</th>
                                 <th>Billing Date</th>
                                 <th>Transaction No.</th>
